# Starknet-ML-Project-Skeleton

./: README.md  main.py  pyproject.toml  requirements.txt
data/: processed.csv  processed_with_anomaly.csv  raw.csv
models/: if_model.pkl
src/: fetch_data.py  preprocess.py  train.py
starknet-ml-project/: main.py
starknet-ml-project/data/: processed.csv  processed_with_anomaly.csv  raw.csv
starknet-ml-project/models/: if_model.pkl
starknet-ml-project/src/: config.py  visualize.py
